[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "nodoka"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "STACiA", email = "stacia.dev@gmail.com" }]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
  "Development Status :: 1 - Planning",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
  # "Programming Language :: Python :: Implementation :: CPython",
  # "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = []

[tool.maturin]
python-source = "python"
module-name = "nodoka._nodoka"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
  "maturin>=1.9.6, <2.0",
  # type-check, lint
  # "mypy>=1.18.2, <2.0",
  "ruff>=0.14.3, <0.15",
  "ty"
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
  ".git",
  ".github",
  ".venv",
  ".vscode",
  ".zed",
  ".ruff_cache",
  ".mypy_cache",
  "dist",
  "target"
]

[tool.ruff.format]
preview = true
quote-style = "single"
skip-magic-trailing-comma = false

[tool.ruff.lint]
preview = true
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
  # "D",  # pydocstyle

  "ANN", # flake8-annotations
  # "ASYNC", # flake8-async
  # "S",     # flake8-bandit
  # "BLE",   # flake8-blind-except
  # "A", # flake8-builtins
  # "DTZ",   # flake8-datetimez
  "FA", # flake8-future-annotations
  # "LOG",   # flake8-logging
  # "G",     # flake8-logging-format
  "PIE", # flake8-pie
  "PYI", # flake8-pyi
  # "PT",  # flake8-pytest-style
  "Q",   # flake8-quotes
  "RSE", # flake8-raise
  "RET", # flake8-return
  # "SIM",   # flake8-simplify
  "TC",  # flake8-type-checking
  "ARG", # flake8-unused-arguments
  # "PTH",   # flake8-use-pathlib

  "PGH",  # pygrep-hooks
  "PL",   # pylint
  "TRY",  # tryceratops
  "PERF", # perflint
  "FURB", # refurb

  "RUF" # ruff-specific rules
]
ignore = [
  # "ANN401",  # any-type
  "E501" # line-too-long, handled by black
  # "PLR6301", # no-self-use
  # "TRY003"   # raise-vanilla-args
]
# unfixable = [
#   "F401" # imported-but-unused
# ]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["puyu"]
# required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

# [tool.ruff.lint.pydocstyle]
# convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
runtime-evaluated-base-classes = []

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true
